--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ google-api-core[grpc] >= 1.32.0, <3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4
 discord.py
 google-cloud-dialogflow==2.16.1
 pytz
+google
+beautifulsoup4
